<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="64dp"
    tools:context=".Manual_Configuration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_chosen"
        android:layout_gravity="center_horizontal"
        android:id="@+id/line1"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_mode"
        android:id="@+id/selected_mode"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_change_your_mode_anytime_from_the_app_s_settings"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textAppearance="@android:style/TextAppearance.Small"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_ready_to_unbox_yourself"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/I_m_ready"
        android:onClick="loadManualMain"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:background="@drawable/button_background"
        android:textColor="@color/titletextcolor"/>


</LinearLayout>
