<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="64dp"
    tools:context=".Manual_Configuration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_chosen"
        android:layout_gravity="center_horizontal"
        android:id="@+id/line1"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/selected_mode"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You can change your mode anytime from the app's Settings!"
        android:gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What is your home address?"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:id="@+id/addressTV"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addressET"
        android:hint="1060 W. Addison St, Chicago, IL 60613"
        android:gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:selectAllOnFocus="true"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@drawable/button_background"
        android:textColor="@color/titletextcolor"
        android:layout_gravity="center_horizontal"
        android:id="@+id/addressButton"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:id="@+id/latLongTV"
        android:text=""
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Make sure your GPS is turned on and that you are outside before starting!"
        android:layout_marginBottom="16dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:textColor="@color/titletextcolor"
        android:text="@string/I_m_ready"
        android:id="@+id/startGPS"
        android:padding="5dp"
        android:onClick="loadGPSMain"/>

</LinearLayout>
